[gd_scene load_steps=53 format=3 uid="uid://bn7i51bx58njc"]

[ext_resource type="Script" uid="uid://blnosgiuqure1" path="res://escena_principal/escena_principal.gd" id="1_plhmg"]
[ext_resource type="FontFile" uid="uid://d2pseia0s77lv" path="res://Renogare-Regular.otf" id="2_nl07a"]
[ext_resource type="Texture2D" uid="uid://clm4w8yihlyv1" path="res://animaciones/idle/tile11.png" id="3_qm3w1"]
[ext_resource type="Texture2D" uid="uid://secwoop2gdjo" path="res://animaciones/recibe_danio/tile30.png" id="3_qomnf"]
[ext_resource type="Texture2D" uid="uid://o3f2vpqo7u7v" path="res://animaciones/recibe_danio/tile31.png" id="4_f134c"]
[ext_resource type="Texture2D" uid="uid://nix0op8q5ky1" path="res://animaciones/idle/tile12.png" id="4_gt0up"]
[ext_resource type="Texture2D" uid="uid://dwamd1o17m8pm" path="res://animaciones/recibe_danio/tile32.png" id="5_5je1j"]
[ext_resource type="Texture2D" uid="uid://c4by56dkckwln" path="res://animaciones/idle/tile13.png" id="5_kfjq6"]
[ext_resource type="Texture2D" uid="uid://dkvha7jm00qd5" path="res://animaciones/recibe_danio/tile33.png" id="6_iyi06"]
[ext_resource type="Texture2D" uid="uid://d3up1rvcxaqt3" path="res://animaciones/recibe_danio/tile34.png" id="7_qm3w1"]
[ext_resource type="Texture2D" uid="uid://14fpiqdtd8ea" path="res://animaciones/recibe_danio/tile35.png" id="8_gt0up"]
[ext_resource type="Texture2D" uid="uid://vm1p3putdsf8" path="res://animaciones/recibe_danio/tile36.png" id="9_kfjq6"]
[ext_resource type="Texture2D" uid="uid://c1flq6rxwdoqe" path="res://animaciones/recibe_danio/tile37.png" id="10_wnpfg"]
[ext_resource type="Texture2D" uid="uid://doo7rpi3f6spf" path="res://animaciones/recibe_danio/tile38.png" id="11_e6438"]
[ext_resource type="Texture2D" uid="uid://jm5qdlsuj8f1" path="res://animaciones/recibe_danio/tile39.png" id="12_u3uol"]
[ext_resource type="Texture2D" uid="uid://c58doqb5dk5o8" path="res://animaciones/recibe_danio/tile40.png" id="13_xjwby"]
[ext_resource type="Script" uid="uid://ce858mi31yivf" path="res://escena_principal/animated_sprite_2d.gd" id="14_f134c"]
[ext_resource type="Texture2D" uid="uid://r507gk50517f" path="res://animaciones/recibe_danio_2/tile52.png" id="17_e6438"]
[ext_resource type="Texture2D" uid="uid://dqeovarv8ha0v" path="res://animaciones/recibe_danio_2/tile53.png" id="18_u3uol"]
[ext_resource type="Texture2D" uid="uid://h5mht2iptyu8" path="res://animaciones/recibe_danio_2/tile54.png" id="19_xjwby"]
[ext_resource type="Texture2D" uid="uid://bymv4ebgyjaam" path="res://animaciones/recibe_danio_2/tile55.png" id="20_lolu4"]
[ext_resource type="Texture2D" uid="uid://dt8tuy5sqnv4n" path="res://animaciones/se_enoja_mucho/tile39.png" id="21_3f87d"]
[ext_resource type="Texture2D" uid="uid://cmvsi0y7s8hwj" path="res://animaciones/se_enoja_mucho/tile40.png" id="22_4uubu"]
[ext_resource type="Texture2D" uid="uid://c6jtm0wh037l0" path="res://animaciones/se_enoja_mucho/tile41.png" id="23_pdhob"]
[ext_resource type="Texture2D" uid="uid://b5dwr1orhn2un" path="res://animaciones/se_enoja_mucho/tile42.png" id="24_nl07a"]
[ext_resource type="Texture2D" uid="uid://cxqpmpfyremp0" path="res://animaciones/se_enoja_mucho/tile43.png" id="25_a68al"]
[ext_resource type="Texture2D" uid="uid://cga3gblhtbkph" path="res://animaciones/se_enoja_mucho/tile44.png" id="26_4iymh"]
[ext_resource type="Texture2D" uid="uid://gvgbpahfrxod" path="res://animaciones/se_enoja_mucho/tile45.png" id="27_24klc"]
[ext_resource type="Texture2D" uid="uid://cep1rj8ym1x5o" path="res://animaciones/se_enoja_mucho/tile46.png" id="28_12e4r"]
[ext_resource type="Texture2D" uid="uid://3r1xyq0owd1u" path="res://animaciones/se_enoja_mucho/tile47.png" id="29_4wcdv"]
[ext_resource type="Texture2D" uid="uid://bivtbg1edjbts" path="res://animaciones/se_enoja_mucho/tile48.png" id="30_pndjr"]
[ext_resource type="Texture2D" uid="uid://bd3m5gbi6xrb1" path="res://animaciones/se_enoja_mucho/tile49.png" id="31_0qmq1"]
[ext_resource type="Texture2D" uid="uid://d3ug3fxuydw0t" path="res://animaciones/se_enoja_mucho/tile50.png" id="32_qnvlk"]
[ext_resource type="Texture2D" uid="uid://dp3e858dultsh" path="res://animaciones/se_enoja_mucho/tile51.png" id="33_nxpf1"]
[ext_resource type="Texture2D" uid="uid://c5qe7gj3g8jnk" path="res://animaciones/se_enoja_mucho/tile52.png" id="34_vewxg"]
[ext_resource type="Texture2D" uid="uid://dog3cv6maianu" path="res://animaciones/se_enoja_mucho/tile53.png" id="35_dqhyj"]
[ext_resource type="Texture2D" uid="uid://bt7usflgo0y5d" path="res://animaciones/se_enoja_mucho/tile54.png" id="36_kf02x"]
[ext_resource type="Texture2D" uid="uid://boophyhae32um" path="res://animaciones/se_enoja_mucho/tile55.png" id="37_52dag"]
[ext_resource type="Texture2D" uid="uid://bo0hoi51tk3hg" path="res://animaciones/se_enoja_mucho/tile56.png" id="38_lp3wv"]
[ext_resource type="Texture2D" uid="uid://ce5krwbscemh6" path="res://animaciones/se_enoja_mucho/tile57.png" id="39_ba222"]
[ext_resource type="Texture2D" uid="uid://b14vrdt2vp3d1" path="res://animaciones/se_enoja_mucho/tile58.png" id="40_t2aje"]
[ext_resource type="Texture2D" uid="uid://mrsq3fe1o3ql" path="res://animaciones/se_enoja_mucho/tile59.png" id="41_lombx"]
[ext_resource type="Texture2D" uid="uid://b7prjyoea4cni" path="res://fondo/paisaje.jpg" id="42_3f87d"]
[ext_resource type="PackedScene" uid="uid://dptmjxtyq44v8" path="res://libelulas/libelulas.tscn" id="43_4uubu"]
[ext_resource type="Script" uid="uid://butj77vpa6kce" path="res://libelulas/animated_sprite_2d.gd" id="47_4wcdv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a68al"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.17607704, 0.65434957, 0.8325702, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1764706, 0.47843137, 0.83137256, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nl07a"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1764706, 0.41960785, 0.7254902, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24klc"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1764706, 0.5529412, 0.7764706, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4iymh"]
bg_color = Color(0.1764706, 0.654902, 0.83137256, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1764706, 0.47843137, 0.83137256, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12e4r"]
bg_color = Color(0.1764706, 0.5529412, 0.7764706, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="SpriteFrames" id="SpriteFrames_r0811"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qm3w1")
}, {
"duration": 1.0,
"texture": ExtResource("4_gt0up")
}, {
"duration": 1.0,
"texture": ExtResource("5_kfjq6")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qomnf")
}, {
"duration": 1.0,
"texture": ExtResource("4_f134c")
}, {
"duration": 1.0,
"texture": ExtResource("5_5je1j")
}, {
"duration": 1.0,
"texture": ExtResource("6_iyi06")
}, {
"duration": 1.0,
"texture": ExtResource("7_qm3w1")
}, {
"duration": 1.0,
"texture": ExtResource("8_gt0up")
}, {
"duration": 1.0,
"texture": ExtResource("9_kfjq6")
}, {
"duration": 1.0,
"texture": ExtResource("10_wnpfg")
}, {
"duration": 1.0,
"texture": ExtResource("11_e6438")
}, {
"duration": 1.0,
"texture": ExtResource("12_u3uol")
}, {
"duration": 1.0,
"texture": ExtResource("13_xjwby")
}],
"loop": false,
"name": &"recibe_danio",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qomnf")
}, {
"duration": 1.0,
"texture": ExtResource("4_f134c")
}, {
"duration": 1.0,
"texture": ExtResource("5_5je1j")
}, {
"duration": 1.0,
"texture": ExtResource("6_iyi06")
}, {
"duration": 1.0,
"texture": ExtResource("7_qm3w1")
}, {
"duration": 1.0,
"texture": ExtResource("8_gt0up")
}, {
"duration": 1.0,
"texture": ExtResource("17_e6438")
}, {
"duration": 1.0,
"texture": ExtResource("18_u3uol")
}, {
"duration": 1.0,
"texture": ExtResource("19_xjwby")
}, {
"duration": 1.0,
"texture": ExtResource("20_lolu4")
}],
"loop": false,
"name": &"recibe_danio_2",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_3f87d")
}, {
"duration": 1.0,
"texture": ExtResource("22_4uubu")
}, {
"duration": 1.0,
"texture": ExtResource("23_pdhob")
}, {
"duration": 1.0,
"texture": ExtResource("24_nl07a")
}, {
"duration": 1.0,
"texture": ExtResource("25_a68al")
}, {
"duration": 1.0,
"texture": ExtResource("26_4iymh")
}, {
"duration": 1.0,
"texture": ExtResource("27_24klc")
}, {
"duration": 1.0,
"texture": ExtResource("28_12e4r")
}, {
"duration": 1.0,
"texture": ExtResource("29_4wcdv")
}, {
"duration": 1.0,
"texture": ExtResource("30_pndjr")
}, {
"duration": 1.0,
"texture": ExtResource("31_0qmq1")
}, {
"duration": 1.0,
"texture": ExtResource("32_qnvlk")
}, {
"duration": 1.0,
"texture": ExtResource("33_nxpf1")
}, {
"duration": 1.0,
"texture": ExtResource("34_vewxg")
}, {
"duration": 1.0,
"texture": ExtResource("35_dqhyj")
}, {
"duration": 1.0,
"texture": ExtResource("36_kf02x")
}, {
"duration": 1.0,
"texture": ExtResource("37_52dag")
}, {
"duration": 1.0,
"texture": ExtResource("38_lp3wv")
}, {
"duration": 1.0,
"texture": ExtResource("39_ba222")
}, {
"duration": 1.0,
"texture": ExtResource("40_t2aje")
}, {
"duration": 1.0,
"texture": ExtResource("41_lombx")
}, {
"duration": 1.0,
"texture": ExtResource("21_3f87d")
}, {
"duration": 1.0,
"texture": ExtResource("22_4uubu")
}, {
"duration": 1.0,
"texture": ExtResource("23_pdhob")
}, {
"duration": 1.0,
"texture": ExtResource("24_nl07a")
}, {
"duration": 1.0,
"texture": ExtResource("25_a68al")
}, {
"duration": 1.0,
"texture": ExtResource("26_4iymh")
}, {
"duration": 1.0,
"texture": ExtResource("27_24klc")
}, {
"duration": 1.0,
"texture": ExtResource("28_12e4r")
}, {
"duration": 1.0,
"texture": ExtResource("29_4wcdv")
}, {
"duration": 1.0,
"texture": ExtResource("30_pndjr")
}, {
"duration": 1.0,
"texture": ExtResource("31_0qmq1")
}, {
"duration": 1.0,
"texture": ExtResource("32_qnvlk")
}, {
"duration": 1.0,
"texture": ExtResource("33_nxpf1")
}, {
"duration": 1.0,
"texture": ExtResource("34_vewxg")
}, {
"duration": 1.0,
"texture": ExtResource("35_dqhyj")
}, {
"duration": 1.0,
"texture": ExtResource("36_kf02x")
}, {
"duration": 1.0,
"texture": ExtResource("37_52dag")
}, {
"duration": 1.0,
"texture": ExtResource("38_lp3wv")
}, {
"duration": 1.0,
"texture": ExtResource("39_ba222")
}, {
"duration": 1.0,
"texture": ExtResource("40_t2aje")
}, {
"duration": 1.0,
"texture": ExtResource("41_lombx")
}],
"loop": false,
"name": &"se_enoja_mucho",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_pndjr"]
animations = [{
"frames": [],
"loop": true,
"name": &"volando",
"speed": 3.0
}]

[node name="escena_principal" type="Node2D"]
script = ExtResource("1_plhmg")

[node name="golpear" type="Button" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 472.0
offset_top = 132.0
offset_right = 690.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_nl07a")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_a68al")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nl07a")
theme_override_styles/hover = SubResource("StyleBoxFlat_24klc")
text = "GOLPEAR
"

[node name="reiniciar" type="Button" parent="."]
texture_filter = 1
offset_left = 474.0
offset_top = 243.0
offset_right = 690.0
offset_bottom = 336.0
theme_override_fonts/font = ExtResource("2_nl07a")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_4iymh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nl07a")
theme_override_styles/hover = SubResource("StyleBoxFlat_12e4r")
text = "REINICIAR"

[node name="Personaje" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Personaje"]
texture_filter = 1
position = Vector2(582.99994, 515)
scale = Vector2(3.4, 3.3999999)
sprite_frames = SubResource("SpriteFrames_r0811")
animation = &"se_enoja_mucho"
script = ExtResource("14_f134c")

[node name="fondo" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(509.99997, 154)
scale = Vector2(0.41724998, 0.41725)
texture = ExtResource("42_3f87d")
offset = Vector2(155.78198, 385.8598)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Libelulas" parent="." instance=ExtResource("43_4uubu")]
position = Vector2(176, -43)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Libelulas"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_pndjr")
animation = &"volando"
script = ExtResource("47_4wcdv")

[connection signal="pressed" from="golpear" to="Personaje/AnimatedSprite2D" method="_on_golpear_pressed"]
[connection signal="pressed" from="reiniciar" to="Personaje/AnimatedSprite2D" method="_on_reiniciar_pressed"]
[connection signal="animation_finished" from="Personaje/AnimatedSprite2D" to="Personaje/AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
